# test-task-in-Inno

./: .env  .env.template  .gitignore  README.md  pyproject.toml  requirements.txt
apps/weather/: models.py  serializers.py  urls.py  utils.py  views.py
apps/weather/migrations/: 0001_initial.py
apps/weather/services/: __init__.py  api.py
weather_project/: __init__.py  asgi.py  env_config.py  settings.py  urls.py  wsgi.py
