[project]
name = "test-task-in-inno"
version = "0.1.0"
description = ""
authors = [
    {name = "vellimir",email = "kkazancov@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.7"
dependencies = [
    "djangorestframework (>=3.16.0,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "drf-yasg (>=1.21.10,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
